--- a/styles/globals.css
+++ b/styles/globals.css
@@ -5,12 +5,12 @@
 
 html {
 	scroll-behavior: smooth;
+	font-size: 16px;
 }
 
 body {
-	@apply bg-white text-gray-950 font-mono;
+	@apply bg-white text-gray-950 font-mono text-sm sm:text-[0.925rem] md:text-[0.975rem] lg:text-base;
 	margin: 0;
-	font-size: 16px;
 	font-display: block;
 }
 
@@ -52,7 +52,7 @@ a {
 }
 
 .container {
-	@apply max-w-[100ch];
+	@apply max-w-[96%] md:max-w-[96%] lg:max-w-[100ch];
 }
 
 .select-none {
@@ -64,23 +64,26 @@ a {
 
 /* Headings */
 h1 {
-	@apply text-5xl font-bold leading-[4rem];
+	@apply text-3xl lg:text-5xl font-bold leading-[2.5rem] lg:leading-[4rem];
 }
 h2 {
-	@apply text-4xl font-bold leading-[3.5rem] tracking-tight;
+	@apply text-2xl lg:text-4xl font-bold leading-[2rem] lg:leading-[3.5rem] tracking-tight;
 }
 h3 {
-	@apply text-3xl font-bold leading-[2.5rem] tracking-tight;
+	@apply text-xl lg:text-3xl font-bold leading-[1.825rem] lg:leading-[2.5rem] tracking-tight;
 }
 h4 {
-	@apply text-2xl font-bold leading-[2.25rem] tracking-tight;
+	@apply text-lg lg:text-2xl font-bold leading-[1.75rem] lg:leading-[2.25rem] tracking-tight;
 }
 h5 {
-	@apply text-xl font-bold leading-[2rem] tracking-tight;
+	@apply text-base lg:text-xl font-bold leading-[1.5rem] lg:leading-[2rem] tracking-tight;
+}
+p {
+	@apply leading-7 lg:leading-8;
 }
 
 .text-stroke {
-	-webkit-text-stroke: 1.5px rgba(100, 100, 100, 0.2);
+	-webkit-text-stroke: 1.5px rgba(100, 100, 100, 0.3);
 	user-select: none;
 }
 
@@ -190,7 +193,7 @@ h5 {
 		rgba(255, 222, 30, 0.7)
 	);
 	@apply inline-block rounded-full w-12 h-7 text-sm relative
-    cursor-pointer transition-all;
+    cursor-pointer transition-all scale-90 md:scale-100;
 }
 .dark .darkmode-toggle {
 	background: linear-gradient(
@@ -240,8 +243,9 @@ h5 {
 .nav-link {
 	@apply hover:bg-gray-100 text-gray-700 hover:text-black;
 	@apply dark:text-gray-200 dark:hover:text-white dark:hover:bg-gray-900;
-	@apply py-1.5 px-3 rounded mr-4 no-underline hover:no-underline
-    tracking-tight font-medium text-[0.975rem] border border-transparent;
+	@apply text-[0.9rem] md:text-[0.975rem];
+	@apply py-1 lg:py-1.5 px-2 lg:px-3 rounded mr-2.5 lg:mr-4 no-underline hover:no-underline
+    tracking-tight font-medium border border-transparent;
 }
 .nav-link[aria-current="true"]:nth-child(1) {
 	@apply bg-cerise-100 dark:bg-cerise-600/10;
