--- a/styles/blog.css
+++ b/styles/blog.css
@@ -8,7 +8,7 @@
 .blog-content h4,
 .blog-content h5,
 .blog-content h6 {
-	@apply font-serif mb-4 lg:mb-6 mt-8 text-gray-950 dark:text-gray-100 relative antialiased;
+	@apply font-serif mb-4 lg:mb-6 mt-8 text-gray-950 dark:text-white relative antialiased tracking-normal;
 }
 .blog-content h1 {
 	@apply mb-6 lg:mb-8 mt-14 text-4xl lg:text-7xl font-black leading-[3rem] lg:leading-[5.5rem];
