--- a/styles/blog.css
+++ b/styles/blog.css
@@ -164,7 +164,7 @@ pre {
 }
 
 .blog-content a {
-	@apply text-black dark:text-white hover:text-black;
+	@apply text-black dark:text-white hover:text-black hover:no-underline;
 }
 .dark .blog-content a {
 	@apply text-gray-100 hover:text-white;
