--- a/styles/blog.css
+++ b/styles/blog.css
@@ -11,7 +11,7 @@
 	@apply font-serif mb-4 lg:mb-6 mt-8 text-gray-950 dark:text-white relative antialiased tracking-normal;
 }
 .blog-content h1 {
-	@apply mb-6 lg:mb-8 mt-14 text-4xl lg:text-6xl font-black leading-[3rem] lg:leading-[5.5rem];
+	@apply mb-6 lg:mb-8 mt-14 text-4xl lg:text-6xl font-black leading-[3rem] lg:leading-[5rem];
 }
 .blog-content h2 {
 	@apply mb-5 lg:mb-7 mt-12 text-3xl lg:text-5xl font-black leading-[2.75rem] lg:leading-[4rem];
@@ -134,8 +134,8 @@
 
 .blog-content code {
 	@apply text-[0.925rem] sm:text-[0.95rem] md:text-[0.975rem] lg:text-base;
-	@apply text-purple-800 dark:text-purpear-200;
-	@apply bg-purpear-200/50 opacity-90 inline-block dark:bg-purpear-500/20 font-mono px-1.5 rounded text-sm lg:text-base;
+	@apply text-purple-800 dark:text-purpear-300;
+	@apply bg-black/5 opacity-90 inline-block dark:bg-white/5 font-mono px-1.5 rounded text-sm lg:text-base;
 }
 pre {
 	@apply rounded-md dark:!bg-gray-100/10 !bg-[#0d0d0d];
@@ -143,7 +143,7 @@ pre {
 pre {
 	margin: 0.5em 0;
 	overflow: auto;
-	@apply !p-2 lg:!p-4 invert dark:invert-0;
+	@apply !p-2 lg:!p-4;
 }
 .blog-content pre code {
 	counter-reset: line;
@@ -164,19 +164,10 @@ pre {
 }
 
 .blog-content a {
-	@apply text-black dark:text-white hover:text-black hover:no-underline;
+	@apply text-skeal-600 hover:text-skeal-700 underline underline-offset-[5px];
 }
 .dark .blog-content a {
-	@apply text-gray-100 hover:text-white;
-}
-.blog-content a::before {
-	content: "";
-	@apply bg-skeal-300/70 absolute bottom-[0.25rem] right-0 left-0 h-[0.15rem]
-    transition-all duration-300;
-}
-.blog-content a:hover::before {
-	background: linear-gradient(to right, #d53a9d, #743ad5);
-	@apply bottom-0 transition-all duration-300;
+	@apply text-skeal-300 hover:text-skeal-500;
 }
 .blog-content a.data-footnote-backref::before {
 	@apply right-0;
