--- a/styles/blog.css
+++ b/styles/blog.css
@@ -8,25 +8,25 @@
 .blog-content h4,
 .blog-content h5,
 .blog-content h6 {
-	@apply font-serif mb-4 lg:mb-6 mt-8 text-gray-950 dark:text-white relative antialiased tracking-normal;
+	@apply font-serif mb-4 lg:mb-6 mt-8 text-gray-950 dark:text-gray-100 relative antialiased tracking-normal;
 }
 .blog-content h1 {
-	@apply mb-6 lg:mb-8 mt-14 text-4xl lg:text-6xl font-black leading-[3rem] lg:leading-[5rem];
+	@apply mb-6 lg:mb-8 mt-14 text-4xl lg:text-5xl font-black leading-[3rem] lg:leading-[4rem];
 }
 .blog-content h2 {
-	@apply mb-5 lg:mb-7 mt-12 text-3xl lg:text-5xl font-black leading-[2.75rem] lg:leading-[4rem];
+	@apply mb-5 lg:mb-7 mt-12 text-3xl lg:text-4xl font-black leading-[2.75rem] lg:leading-[3rem];
 }
 .blog-content h3 {
-	@apply mb-4 lg:mb-6 mt-9 text-2xl lg:text-4xl leading-[2.25rem] lg:leading-[3rem];
+	@apply mb-4 lg:mb-6 mt-9 text-2xl lg:text-3xl leading-[2.25rem] lg:leading-[2.5rem];
 }
 .blog-content h4 {
-	@apply text-xl lg:text-3xl leading-[2rem] lg:leading-[2.75rem];
+	@apply text-xl lg:text-2xl leading-[2rem];
 }
 .blog-content h5 {
-	@apply text-lg lg:text-2xl leading-[1.9rem] lg:leading-[2.5rem];
+	@apply text-lg lg:text-xl leading-[1.9rem];
 }
 .blog-content h6 {
-	@apply text-base lg:text-xl;
+	@apply text-base;
 	@apply leading-6 sm:leading-7 md:leading-8 lg:leading-9;
 }
 /* headings link */
@@ -72,9 +72,9 @@
 }
 
 .blog-content p {
-	@apply text-base md:text-[1.05rem] lg:text-[1.1rem] antialiased;
-	@apply leading-6 md:leading-7 lg:leading-8;
-	@apply my-4 lg:my-6 text-gray-950 dark:text-gray-200;
+	@apply text-[1rem] sm:text-[1.15rem] md:text-[1.2rem] lg:text-[1.25rem] antialiased;
+	@apply leading-8 md:leading-9 lg:leading-9;
+	@apply my-7 md:my-9 text-gray-950 dark:text-gray-200;
 }
 
 .blog-content li {
